k8s/legacy/ingress1/ingress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress
  namespace: default
  labels:
    app: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-ingress
  template:
    metadata:
      labels:
        app: nginx-ingress
    spec:
      serviceAccountName: nginx-ingress
      containers:
      - image: ingress-nginx/controller
        imagePullPolicy: Always
        name: nginx-plus-ingress
        ports:
        - name: realmd
          containerPort: 3724
        - name: mangosd
          containerPort: 8085
        args:
          - /nginx-ingress-controller
          - --tcp-services-configmap=default/ingress-nginx-tcp
