k8s/legacy/ingress1/network-policy-realmd.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: realmd-allow-all
  namespace: default
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: realmd 
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - {}
  egress:
    - {}
